# apophysis

./: .gitignore  __main__.py  pyproject.toml  render_animation.fish  sample_fractal.flame
src/apophysis/: __main__.py  renderer.py
